--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -38,6 +38,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+      - name: Replace credentials
+        run: |
+          sed -i 's/__firebaseApiKey__/${{ secrets.FIREBASEAPIKEY }}/g' config/_default/params.toml          
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
