--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 [[firebaseConfig]]
-apiKey = "__firebaseApiKey__"
+apiKey = "AIzaSyBOmuWPMG4zLWRzXqAlK0ajie1sVIL1gzM"
 authDomain = "vrhinow-blog.firebaseapp.com"
 projectId = "vrhinow-blog"
 storageBucket = "vrhinow-blog.firebasestorage.app"
