now working config

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,4 +1,4 @@
-[[firebaseConfig]]
+[firebase]
 apiKey = "AIzaSyBOmuWPMG4zLWRzXqAlK0ajie1sVIL1gzM"
 authDomain = "vrhinow-blog.firebaseapp.com"
 projectId = "vrhinow-blog"
